# sensor_app

./: .gitignore  README.md  README_data.md  main.py  package-lock.json  package.json  pyproject.toml  run_main.py  run_main.spec
backend/: app.py
backend/analyser/: garbage.py  toilet.py
backend/dataloader/: tof_base.py  toilet.py
backend/visualizer/: garbage.py  toilet.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: Accordion.css  Accordion.tsx  Charts.css  Charts.tsx  DataPreview.css  DataPreview.tsx  DownloadButton.css  DownloadButton.tsx  FileUploader.css  FileUploader.tsx  Footer.css  Footer.tsx  Loader.css  Loader.tsx  SummaryTable.css  SummaryTable.tsx
frontend/src/interfaces/: index.ts
hooks/: hook-streamlit.py
src/analyser/: toilet.py
src/dataloader/: toilet.py
streamlit/: app.py
