[project]
name = "beacon-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "omegaconf>=2.3.0",
    "gradio>=5.1.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
    "pyinstaller>=6.11.0",
    "altair>=5.4.1",
    "watchdog>=5.0.3",
]
