[project]
name = "beacon-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "omegaconf>=2.3.0",
    "gradio>=5.1.0",
    "plotly>=5.24.1",
    "streamlit>=1.39.0",
    "numpy>=2.1.2",
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]

